--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.9.17",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
