--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "supertest": "^4.0.2"
   },
   "apidoc": {
-    "url": "https://127.0.0.1:3001",
+    "url": "https://contact-book.tk:3001",
     "title": "Contact Book api documentation"
   }
 }
