--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "node-sass": "^4.14.1",
     "querystring": "^0.2.0",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-notifications": "^1.6.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
